welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:7: error: ')' expected but 'else' found.
		 } else rep = b
                   ^